# twdspring

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  twdspring.html
.doctrees/: environment.pickle  index.doctree  quickstart.doctree  twdspring.doctree
.github/workflows/: docs.yml  publish-to-pypi.yml  python-package.yml
_sources/: index.rst.txt  twdspring.rst.txt
docs/: conf.py  index.rst  quickstart.rst  spring.rst  twdspring.rst
springpy/: __init__.py  spring.py
src/: __init__.py  spring.py
tests/: conftest.py  test_spring.py
twdspring/: spring.py
