[project]
name = "SPRING"
version = "0.0.1"
description = "Stream Monitoring under the Time Warping Distance"
authors = [
    {name = "Aleksey Astafiev", email = "aastafiev@gmail.com"}
]
requires-python = ">=3.12"

[tool.pytest.ini_options]
log_cli=true
# log_cli_level="INFO"
log_cli_format="[%(levelname)1.1s %(asctime)s %(name)s %(module)s:%(lineno)d] %(message)s"